--- a/css/libnotify.css
+++ b/css/libnotify.css
@@ -16,6 +16,10 @@ body {
 .humane,
 .humane-libnotify {
   font-family: Ubuntu, Arial, sans-serif;
+  font-weight: 500;
+  border-radius: 6px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  border: 1px solid rgba(255,255,255,0.1);
   text-align: center;
   font-size: 15px;
   bottom: 10px;
