--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,12 @@ input {
 	overflow: hidden;
 	box-shadow: inset 0 0 10px rgba(0,0,0,0.05);
 }
-
+#toolbar {
+    background-color: var(--sugar-black) !important;
+    border-bottom: 2px solid #444 !important;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.4) !important;
+    padding: 2px !important;
+}
 body {
 	overflow-x: hidden;
 	height: 100vh;
@@ -861,6 +866,8 @@ body {
 	background-color: #808080;
 	border: 2px solid #808080;
 	user-select: none;
+	transition: all 0.2s ease-in-out !important;
+    border-radius: 6px !important;
 }
 
 .icon-button-text {
